--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,8 @@ deps =
     nose
     nose-cov
     {[testenv]deps}
-commands =
-    nosetests --with-cov --cov-report term-missing \
-    --cov bigip_sdk bigip_sdk/tests
+commands = nosetests --with-cov --cov-report term-missing \
+                     --cov bigip_plugin bigip_plugin/tests
+
+
+
